--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "bamarni/composer-bin-plugin": "^1.5"
     },
     "scripts": {
-        "test": "./vendor-bin/phpunit/vendor/bin/phpunit ."
+        "test": "./vendor-bin/phpunit/vendor/bin/phpunit",
+        "build": "./vendor-bin/box/vendor/bin/box compile"
     },
     "minimum-stability": "dev",
     "config": {
